Cleanup, introduction of core and jvs type system.