@@ -23,12 +23,17 @@ package com.hitorro.util.urlparser;
 
 import com.hitorro.util.core.string.StringUtil;
 
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.LinkedHashMap;
+import java.util.Map;
 
 /**
+ * URL utility methods for parsing, cleanup, and extraction.
  */
 public class URLUtil {
 
@@ -45,18 +50,94 @@ public class URLUtil {
 
     public static final String cleanupUrl(String url) {
         try {
-            url = URLDecoder.decode(url, "UTF-8");
+            url = URLDecoder.decode(url, StandardCharsets.UTF_8);
             return new URL(url).toString();
         } catch (MalformedURLException mue) {
             return url;
-        } catch (UnsupportedEncodingException e) {
+        } catch (IllegalArgumentException e) {
             return url;
-        } catch (java.lang.IllegalArgumentException e) {
-            return "";
         }
     }
 
     public static final String cleanupUrlAndCutToLength(String url, int length) {
         return StringUtil.truncateToLength(cleanupUrl(url), length);
+    }
+
+    /**
+     * Validates whether a string looks like a valid URL with protocol and host.
+     */
+    public static boolean isValidUrl(String url) {
+        if (StringUtil.nullOrEmptyString(url)) {
+            return false;
+        }
+        try {
+            URL u = new URL(url);
+            return u.getHost() != null && !u.getHost().isEmpty();
+        } catch (MalformedURLException e) {
+            return false;
+        }
+    }
+
+    /**
+     * Extract query parameters from a URL as a map.
+     * Duplicate keys are overwritten (last wins).
+     */
+    public static Map<String, String> getQueryParameters(String url) {
+        Map<String, String> params = new LinkedHashMap<>();
+        if (StringUtil.nullOrEmptyString(url)) {
+            return params;
+        }
+        int qIndex = url.indexOf('?');
+        if (qIndex == -1 || qIndex == url.length() - 1) {
+            return params;
+        }
+        String query = url.substring(qIndex + 1);
+        // strip fragment
+        int hashIndex = query.indexOf('#');
+        if (hashIndex != -1) {
+            query = query.substring(0, hashIndex);
+        }
+        String[] pairs = query.split("&");
+        for (String pair : pairs) {
+            int eqIndex = pair.indexOf('=');
+            if (eqIndex > 0) {
+                String key = URLDecoder.decode(pair.substring(0, eqIndex), StandardCharsets.UTF_8);
+                String value = eqIndex < pair.length() - 1
+                        ? URLDecoder.decode(pair.substring(eqIndex + 1), StandardCharsets.UTF_8)
+                        : "";
+                params.put(key, value);
+            } else if (!pair.isEmpty()) {
+                params.put(URLDecoder.decode(pair, StandardCharsets.UTF_8), "");
+            }
+        }
+        return params;
+    }
+
+    /**
+     * Extract the host portion of a URL.
+     */
+    public static final String getHost(String url) {
+        if (StringUtil.nullOrEmptyString(url)) {
+            return null;
+        }
+        try {
+            return new URL(url).getHost();
+        } catch (MalformedURLException e) {
+            return null;
+        }
+    }
+
+    /**
+     * Extract the path portion of a URL.
+     */
+    public static final String getPath(String url) {
+        if (StringUtil.nullOrEmptyString(url)) {
+            return null;
+        }
+        try {
+            return new URL(url).getPath();
+        } catch (MalformedURLException e) {
+            return null;
+        }
     }
 }
